Fix portfolio: nav, links, OG tags, image overflow, cleanup

--- a/css/basic.css
+++ b/css/basic.css
@@ -172,6 +172,11 @@ instead, display a burger menu.
   }
 }
 
+.franklin-content img {
+  max-width: 100%;
+  height: auto;
+}
+
 table {
   line-height: 1em;
   margin-left: auto;
